# Vagabond-Fuse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS.md  FULL_CODEBASE_DOCUMENTATION.md  LICENSE.md  README.md  START.md  SUMMARY.md  check-funding.ts  credential.json  opa  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wallet-adapter-example.ts  xrpl-did-example-original.ts
.cursor/: rules.md  settings.json
.cursor/prompts/: add_python_cred_stats.prompt  add_xrpl_method.prompt  create_wallet_adapter.prompt  hardening_policy_engine.prompt  scaffold_sdk.prompt
docs/: advanced_policy_engine.md  corss_chain_identity_management.md  creating_did.md  credential_hub.md  did_gateway.md  integration_guide.md  issuing_credential.md  policy_based_access_control.md  policy_engine.md  secure_key_management.md  use_hardware_wallets.md  verifiable_credentials.md  wallet_kit.md  zero_knowledge_proofs.md
examples/: README-credential-hub-stats.md  README-policy-engine-wasm.md  README.md  credential-hub-example.py  credential-hub-stats-example.py  credential-hub-stats-example.ts  did-gateway-example.ts  did-gateway-xrpl-example.ts  did-gateway-xrpl-hooks-example.ts  fix-422-errors.js  fix-422-errors.py  integration-example-mock.ts  integration-example.ts  package-lock.json  package.json  policy-engine-example.py  policy-engine-real-world-example.py  policy-engine-service-example.py  policy-engine-service-wasm-example-fixed.cjs  policy-engine-service-wasm-example.py  policy-engine-service-wasm-example.ts  policy-engine-wasm-example.py  policy-engine-wasm-example.ts  policy-utils-example.ts  real-xrpl-adapter.d.ts  real-xrpl-adapter.mjs  requirements.txt  run-all-examples-with-env.sh  run-all-examples.sh  start-credential-hub.sh  ts-node-esm-config.js  tsconfig.json  wallet-adapter-example.ts  wallet-example.mts  xrpl-did-example-standalone.md  xrpl-did-example-standalone.ts  xrpl-did-example.ts  xrpl-token-payment-example.ts
examples/eudi-toolkit/: .gitignore  ONCHAIN-PROOF-SUMMARY.md  README.md  REAL-ONCHAIN-EVIDENCE.md  XRPL-ONCHAIN-CREDENTIALS.md  age-policy.json  contract-data.json  contract.json  credential.json  diploma-data.json  diploma.json  education-proof.json  hotel-booking.json  hotel-checkin-proof.json  org-data.json  org-demo.js  org-identity.json  org-role-data.json  org-role-proof.json  org-role.json  package-lock.json  package.json  payment-auth-data.json  payment-auth.json  payment-data.json  (+33 more)
services/credential-hub/: .env  IMPLEMENTATION_SUMMARY.md  PRODUCTION_README.md  PROOF_SERVICE.md  README.md  clickhouse_test.py  create_tables.sql  deploy.sh  package-lock.json  package.json  pyproject.toml  setup.sh  setup_clickhouse.sql  start_service.py
services/credential-hub/app/: __init__.py  config.py  database.py  main.py  models.py  monitoring.py
services/credential-hub/app/services/: __init__.py  anchor_service.py  auth_service.py  credential_service.py  policy_service.py  proof_service.py  stats_service.py
services/credential-hub/tests/: __init__.py  test_credential_api.py  test_credential_service.py  test_proof_service.py  test_proof_service_production.py  test_stats_service.py
services/policy-engine/: README.md  pyproject.toml  pytest.ini.bak
services/policy-engine/app/: __init__.py  main.py  models.py
services/policy-engine/app/services/: __init__.py  evaluator.py  policy_service.py
services/policy-engine/opa/: gdpr.rego  gdpr.wasm  gdpr_reasons.wasm
services/policy-engine/tests/: __init__.py  test_evaluator.py  test_policy_integration.py  test_policy_service.py
(+109 files in other folders)
